// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformGranularConsent tests should not add privacy policy or terms of service links when they do not exist in transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom field.",
            "label": "Custom 1 label",
            "mutable": true,
            "name": "optedScopes.custom.custom1",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom 2 field.",
            "label": "Custom 2 label",
            "mutable": true,
            "name": "optedScopes.custom.custom2",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "optedScopes.openid",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a description for the profile field.",
            "label": "Label for profile field",
            "mutable": false,
            "name": "optedScopes.profile",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformGranularConsent tests should not reorder existing field elements when all are mutable and should add additional granular consent elements to formbag 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom field.",
            "label": "Custom 1 label",
            "mutable": true,
            "name": "optedScopes.custom.custom1",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom 2 field.",
            "label": "Custom 2 label",
            "mutable": true,
            "name": "optedScopes.custom.custom2",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "options": {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformGranularConsent tests should reorder existing field elements and add additional granular consent elements to formbag 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "noMargin": true,
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom field.",
            "label": "Custom 1 label",
            "mutable": true,
            "name": "optedScopes.custom.custom1",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a custom description for the custom 2 field.",
            "label": "Custom 2 label",
            "mutable": true,
            "name": "optedScopes.custom.custom2",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "optedScopes.openid",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "desc": "This is a description for the profile field.",
            "label": "Label for profile field",
            "mutable": false,
            "name": "optedScopes.profile",
            "required": true,
            "type": "boolean",
            "value": true,
            "visible": true,
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "dataSe": "terms-of-service",
          "href": "https://okta1.com/tos",
          "label": "consent.required.termsOfService",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "options": {
          "dataSe": "privacy-policy",
          "href": "https://okta1.com/privacypolicy",
          "label": "consent.required.privacyPolicy",
          "step": "",
          "target": "_blank",
        },
        "type": "Link",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": true,
          "step": "",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
